@@ -3,6 +3,7 @@
     * Fix quoting and filtering with left message data
     * Fix "edit" link with message link icons stylesheet
     * Update 8for11 CSS
+    * Fix QuickPost reset button
 
 2011-02-05:
     * version 0.7.11
